syntax = "proto3";

import "Protos/common.proto";

option csharp_namespace = "MyGrpcService.Protos";

package MyGrpcService;

service MyGrpcService {
  rpc DoSomething (MyMessageRequest) returns (commons.protos.MessageResponse);
}

message MyMessageRequest {
  string message = 1;
}

message MyMessageResponse {
  string response_message = 1;
}